--- a/CSS - Personal Site/index.html
+++ b/CSS - Personal Site/index.html
@@ -27,7 +27,7 @@
         <div>
             <img class="profile-picture" src="images/laide-picture.jpg" alt="Laide's Profile Picture" width="150px" height="150px">
             <h2>Hi! &#128516</h2>
-            <p class="intro">Currently, I teach at <a href="https://www.brightmindsint.org/home">Bright Minds International School, Abuja - Nigeria</a>. I am also a member of the <a href="https://www.shecodeafrica.org/">SheCodeAfrica</a> Community where I actively partcipate in productive learning activities and socialise with other members. I am also taking a Post-Graduate Diploma in Software Engineering Course at <a href="https://niitabuja.com/">NIIT Abuja</a>. In addition to all this awesome stuff, I am a Church Administrator, Singer, Home Tutor, Scrabble Enthusiast and a Chartered Banker. I strongly believe that I can impact my world positively through Technology and I'm very interested in working remotely with Teams that share those values.</p>
+            <p class="intro">Currently, I own a Tutoring Business called <a href="https://www.instagram.com/lightmanor_acad/">LightManor Academy</a> where I tutor students online (Abuja only) and offline (Worldwide). I am also taking a Post-Graduate Diploma in Software Engineering Course at <a href="https://niitabuja.com/">NIIT Abuja</a>. In addition to all this awesome stuff, I am a Church Administrator, Worship Leader, Singer/Songwriter, Budding Pianist/Keyboardist, Scrabble Enthusiast and a Chartered Banker. I strongly believe that I can impact my world positively through Technology and I'm very interested in working remotely with Teams that share those values.</p>
         </div>
         <hr>
         <div class="skills">
@@ -41,7 +41,7 @@
                     <p>I am absolutely passionate about teaching. I believe this helps me to be a better programmer. I was inspired to become a teacher by one of my lecturers in University, Mr. Oguntodu (May his soul rest in peace). I will keep teaching until I can no longer talk anymore.</p>
                     <img class="music-img" src="images/music.gif" alt="animated musical note">
                     <h3>Music</h3>
-                    <p>No one on this planet loves music as much as I do. I love to sing, I appreciate great music and I even write songs of my own. It is my absolute favourite pastime. If you want to stay on my good side, DO. NOT. INTERRUPT. MY. MUSIC. &#128540</p>
+                    <p>No one on this planet loves music as much as I do. I love to sing (I'm a worship leader, the Convener of True Worship Sessions), I appreciate great music and I even write songs of my own. It is my absolute favourite pastime. If you want to stay on my good side, DO. NOT. INTERRUPT. MY. MUSIC. &#128540</p>
                 </div>
         </div>
         <hr>
@@ -56,7 +56,7 @@
         <a class="footer-link" href="https://ng.linkedin.com/in/olayide-majoyeogbe-704b1128">LinkedIn</a>
         <a class="footer-link" href="https://www.twitter.com/bondress">Twitter</a>
         <a class="footer-link" href="https:/www.github.com/bondress">Github</a>
-        <p class="copyright">© 2021 Laide Endeley</p>
+        <p class="copyright">© 2023 Laide Endeley</p>
     </div>
 </body>
 </html>
