--- a/index.html
+++ b/index.html
@@ -1,146 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta
-        description="This is Laide Endeley's Personal Website where you can find relevant and up-to-date information about her.">
-    <meta author="Laide Endeley">
-    <title>Laide's Personal Site</title>
+    <title>Laide Endeley</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+    <!-- Adding an icon using favicon -->
+    <link rel="icon" href="laide.ico">
 </head>
-
 <body>
-    <table cellspacing="20px">
-        <tr>
-            <td><img src="images/laide-profile-picture.jpeg" alt="laide profile picture"></td>
-            <td><h1>Laide Endeley</h1>
-                <!-- It's better to use <em> instead of <i> for italicising text
-                    because <em> confers more meaning. Also, it's better to use <strong> instead of <b> (bold). -->
-                <p><strong><em>Full Stack Developer</em></strong></p>
-                <p>I am currently a member of the <a href="https://www.shecodeafrica.org/">SheCodeAfrica</a> Community where I
-                    actively partcipate in productive learning activities and socialise with other members. I am also taking a
-                    Post-Graduate Diploma in Software Engineering Course at <a href="https://niitabuja.com/">NIIT Abuja</a>. I am a
-                    Chartered Banker, Home Tutor, Administrator and a Scrabble Enthusiast. I strongly believe that I can impact my
-                    world positively through Technology and I'm very interested in working with Teams that share those values.</p>
-                </td>
-        </tr>
-    </table>
-    <hr>
-    <h3>Education</h3>
-    <ul>
-        <li>Honours Diploma in Information Technology (Software Engineering) (<a
-                href="https://niitfortesoft.com/">NIIT-Lagos</a>, 2009)</li>
-        <li>B.SC. (HONS) Banking and Finance 4.1GPA (Second Class – Upper Division) (<a
-                href="https://babcock.edu.ng/">Babcock University</a>, 2013)</li>
-        <li>Android Basics Nanodegree (<a href="https://www.udacity.com/">Udacity</a>, 2018)</li>
-        <li>Technical Support Fundamentals (<a href="https://www.coursera.org/">Coursera</a>, 2020)</li>
-        <li>Jobberman Soft Skills Training (<a href="https://www.jobberman.com/">Jobberman</a>, 2020)</li>
-        <li>Oracle Java Explorer (<a
-                href="https://learn.oracle.com/ols/learning-path/java-explorer/40805/79726">Oracle</a>, 2021)</li>
-        <li>SheCodeAfrica Mentoring Program(Java) (<a href="https://www.shecodeafrica.org/">SheCodeAfrica</a>, 2021)
-        </li>
-    </ul>
-    <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing="20px">
-        <thead>
-            <tr>
-                <th>Dates</th>
-                <th>Work</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2015 - 2017</td>
-                <td>Administrator and Teacher at SpringMeadowEdutainment</td>
-            </tr>
-            <tr>
-                <td>2017 till date</td>
-                <td>Freelance Home Tutor</td>
-            </tr>
-            <tr>
-                <td>2021</td>
-                <td>Mentee at SheCodeAfrica (Java Track)</td>
-            </tr>
-        </tbody>
-        <tfoot></tfoot>
-    </table>
-    <hr>
-    <h3>Skills</h3>
-    <table cellspacing="20px">
-        <tr>
-            <td>RDBMS</td>
-            <td>🌟🌟🌟🌟🌟</td>
-            <td>SQL Server</td>
-            <td>🌟🌟🌟🌟</td>
-        </tr>
-        <tr>
-            <td>Java Programming</td>
-            <td>🌟🌟🌟</td>
-            <td>Android Development (Java)</td>
-            <td>🌟🌟🌟</td>
-        </tr>
-        <tr>
-            <td>Web Development</td>
-            <td>🌟🌟🌟</td>
-            <td>mySQL</td>
-            <td>🌟🌟🌟</td>
-        </tr>
-        <tr>
-            <td>PostgreSQL</td>
-            <td>🌟🌟🌟</td>
-            <td>Spring Boot</td>
-            <td>🌟🌟🌟</td>
-        </tr>
-        <tr>
-            <td>Touch Typing</td>
-            <td>🌟🌟🌟🌟🌟</td>
-            <td>Time Management</td>
-            <td>🌟🌟🌟🌟</td>
-        </tr>
-        <tr>
-            <td>Leadership</td>
-            <td>🌟🌟🌟🌟</td>
-            <td>Organisation</td>
-            <td>🌟🌟🌟🌟</td>
-        </tr>
-        <tr>
-            <td>Written Communication</td>
-            <td>🌟🌟🌟🌟🌟</td>
-            <td>Verbal Communication</td>
-            <td>🌟🌟🌟🌟</td>
-        </tr>
-        <tr>
-            <td>Multi-Tasking</td>
-            <td>🌟🌟🌟🌟</td>
-            <td>Singing</td>
-            <td>🌟🌟🌟🌟</td>
-        </tr>
-        <tr>
-            <td>Scrabble</td>
-            <td>🌟🌟🌟</td>
-            <td>Word Processing</td>
-            <td>🌟🌟🌟🌟</td>
-        </tr>
-        <tr>
-            <td>Proofreading</td>
-            <td>🌟🌟🌟🌟🌟</td>
-            <td>Punctuality</td>
-            <td>🌟🌟🌟🌟🌟</td>
-        </tr>
-        <tr>
-            <td>Cooking</td>
-            <td>🌟🌟🌟🌟</td>
-            <td>Dancing</td>
-            <td>🌟🌟</td>
-        </tr>
-    </table>
-    <hr>
-    <!-- the download attribute makes this link automatically downloaded. it doesnt work :( -->
-    <a href="hobbies.html">My Hobbies</a>
-    <a href="contact-me.html">Contact Me</a>
+    <!-- A div is simply a content division element that allows you to manage content separately -->
+    <div class="top-container">
+        <img class="top-cloud" src="images/cloud.png" alt="cloud image" width="150px" height="100px">
+        <h1 style="margin-bottom: 0;">I'm Laide.</h1>
+    <h2 style="font-size: 30px; margin-top: 0;">a <span><u>Pro</u></span>grammer.</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud image" width="150px" height="100px">
+    <img class="extra-cloud1" src="images/cloud.png" alt="cloud image" width="150px" height="100px">
+    <img class="extra-cloud2" src="images/cloud.png" alt="cloud image" width="150px" height="100px">
+    <img class="extra-cloud3" src="images/cloud.png" alt="cloud image" width="150px" height="100px">
+    <img src="images/mountain.png" >
+    </div>
+    <div class="middle-container">
+        <div>
+            <img class="profile-picture" src="images/laide-picture.jpg" alt="Laide's Profile Picture" width="150px" height="150px">
+            <h2>Hi! &#128516</h2>
+            <p class="intro">Currently, I own a Tutoring Business called <a href="https://www.instagram.com/lightmanor_acad/">LightManor Academy</a> where I tutor students online (Abuja only) and offline (Worldwide). I am also taking a Post-Graduate Diploma in Software Engineering Course at <a href="https://niitabuja.com/">NIIT Abuja</a>. In addition to all this awesome stuff, I am a Church Administrator, Worship Leader, Singer/Songwriter, Budding Pianist/Keyboardist, Scrabble Enthusiast and a Chartered Banker. I strongly believe that I can impact my world positively through Technology and I'm very interested in working remotely with Teams that share those values.</p>
+        </div>
+        <hr>
+        <div class="skills">
+            <h2>My Skills.</h2>
+                <div class="skill-row">
+                    <img class="coding-img" src="images/programming.gif" alt="animated laptop">
+                    <h3>Design and Development</h3>
+                    <p>I started learning to code when I was 16 years old because I won a scholarship at my High School for being the Best Computing Student in my year. Over time, I have gained a wealth of knowledge and experience designing and developing desktop, mobile and web applications.</p>
+                    <img class="teaching-img" src="images/teaching.gif" alt="animated teacher">
+                    <h3>Teaching</h3>
+                    <p>I am absolutely passionate about teaching. I believe this helps me to be a better programmer. I was inspired to become a teacher by one of my lecturers in University, Mr. Oguntodu (May his soul rest in peace). I will keep teaching until I can no longer talk anymore.</p>
+                    <img class="music-img" src="images/music.gif" alt="animated musical note">
+                    <h3>Music</h3>
+                    <p>No one on this planet loves music as much as I do. I love to sing (I'm a worship leader, the Convener of True Worship Sessions), I appreciate great music and I even write songs of my own. It is my absolute favourite pastime. If you want to stay on my good side, DO. NOT. INTERRUPT. MY. MUSIC. &#128540</p>
+                </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>If you love music as much as I do.</h3>
+            <p class="contact-message">Love music as much as I do? Up for a singing challenge? Need help learning a new skill(s)? Want to work together? Need a desktop, mobile or web application? I'm your girl. The best girl for the job.</p>
+            <a class="btn" href="mailto:endeleylaide@gmail.com">CONTACT ME</a>
+        </div>
+    </div>
+    <div class="bottom-container">
+        <a class="footer-link" href="https://ng.linkedin.com/in/olayide-majoyeogbe-704b1128">LinkedIn</a>
+        <a class="footer-link" href="https://www.twitter.com/bondress">Twitter</a>
+        <a class="footer-link" href="https:/www.github.com/bondress">Github</a>
+        <p class="copyright">© 2023 Laide Endeley</p>
+    </div>
 </body>
-
 </html>
