--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div>
             <img class="profile-picture" src="images/laide-picture.jpg" alt="Laide's Profile Picture" width="150px" height="150px">
             <h2>Hi! &#128516</h2>
-            <p class="intro">Currently, I own a Tutoring Business called <a href="https://www.instagram.com/lightmanor_acad/">LightManor Academy</a> where I tutor students online (Abuja only) and offline (Worldwide). I am also taking a Post-Graduate Diploma in Software Engineering Course at <a href="https://niitabuja.com/">NIIT Abuja</a>. In addition to all this awesome stuff, I am a Church Administrator, Worship Leader, Singer/Songwriter, Budding Pianist/Keyboardist, Scrabble Enthusiast and a Chartered Banker. I strongly believe that I can impact my world positively through Technology and I'm very interested in working remotely with Teams that share those values.</p>
+            <p class="intro">Currently, I own a Tutoring Business called <a href="https://www.instagram.com/lightmanor_acad/">LightManor Academy</a> where I tutor students onsite (Abuja only) and online (Worldwide). I am also taking a Post-Graduate Diploma in Software Engineering Course at <a href="https://niitabuja.com/">NIIT Abuja</a>. In addition to all this awesome stuff, I am a Church Administrator, Worship Leader, Singer/Songwriter, Budding Pianist/Keyboardist, Scrabble Enthusiast and a Chartered Banker. I strongly believe that I can impact my world positively through Technology and I'm very interested in working remotely with Teams that share those values.</p>
         </div>
         <hr>
         <div class="skills">
