--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
     <!-- Adding an icon using favicon -->
     <link rel="icon" href="laide.ico">
+    <script src="./js/script.js" defer></script>
 </head>
 <body>
     <!-- A div is simply a content division element that allows you to manage content separately -->
@@ -27,7 +28,7 @@
         <div>
             <img class="profile-picture" src="images/laide-picture.jpg" alt="Laide's Profile Picture" width="150px" height="150px">
             <h2>Hi! &#128516</h2>
-            <p class="intro">Currently, I own a Tutoring Business called <a href="https://www.instagram.com/lightmanor_acad/">LightManor Academy</a> where I tutor students onsite (Abuja only) and online (Worldwide). I am also taking a Post-Graduate Diploma in Software Engineering Course at <a href="https://niitabuja.com/">NIIT Abuja</a>. In addition to all this awesome stuff, I am a Church Administrator, Worship Leader, Singer/Songwriter, Budding Pianist/Keyboardist, Scrabble Enthusiast and a Chartered Banker. I strongly believe that I can impact my world positively through Technology and I'm very interested in working remotely with Teams that share those values.</p>
+            <p class="intro">Currently, I am taking a Post-Graduate Diploma in Software Engineering Course at <a href="https://niitabuja.com/">NIIT Abuja</a>. I also own a Tutoring Business called <a href="https://www.instagram.com/lightmanor_acad/">LightManor Academy</a> where I tutor students onsite (Abuja only) and online (Worldwide) majorly in Maths, English, ICT/Coding and Music. In addition to all this awesome stuff, I am a Singer/Songwriter, Budding Pianist/Keyboardist, Scrabble Enthusiast and a Chartered Banker. I strongly believe that I can impact my world positively through Technology and my other skills and I'm very interested in working remotely with Teams that share those values.</p>
         </div>
         <hr>
         <div class="skills">
@@ -47,8 +48,8 @@
         <hr>
         <div class="contact-me">
             <h2>Get In Touch</h2>
-            <h3>If you love music as much as I do.</h3>
-            <p class="contact-message">Love music as much as I do? Up for a singing challenge? Need help learning a new skill(s)? Want to work together? Need a desktop, mobile or web application? I'm your girl. The best girl for the job.</p>
+            <h3>If you need a desktop, mobile or web application.</h3>
+            <p class="contact-message">Need a desktop, mobile or web application? Up for a singing challenge? Need help learning a new skill(s)? Want to work together? I'm your girl. The best girl for the job.</p>
             <a class="btn" href="mailto:endeleylaide@gmail.com">CONTACT ME</a>
         </div>
     </div>
@@ -56,7 +57,7 @@
         <a class="footer-link" href="https://ng.linkedin.com/in/olayide-majoyeogbe-704b1128">LinkedIn</a>
         <a class="footer-link" href="https://www.twitter.com/bondress">Twitter</a>
         <a class="footer-link" href="https:/www.github.com/bondress">Github</a>
-        <p class="copyright">© 2023 Laide Endeley</p>
+        <p class="copyright">© <span class="copyright-year">2023</span> Laide Endeley</p>
     </div>
 </body>
 </html>
